--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-    "name": "jm-portfolio",
+    "name": "coding-challenge",
     "version": "0.1.0",
     "private": true,
+    "engines": {
+        "npm": "8.19.1",
+        "node": "20.4.0"
+    },
     "scripts": {
         "dev": "next dev",
         "build": "next build",
