--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "prepare": "husky install"
     },
     "dependencies": {
+        "@apollo/client": "^3.8.0-rc.2",
+        "@apollo/experimental-nextjs-app-support": "^0.4.1",
         "@types/node": "20.4.5",
         "@types/react": "18.2.17",
         "@types/react-dom": "18.2.7",
